odczyt i zapisywanie preferencji